[gd_scene load_steps=43 format=2]

[ext_resource path="res://graphics/Tagebuch_bg_Lesezeichen.png" type="Texture" id=1]
[ext_resource path="res://fonts/AYearWithoutRain.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Glossar.gd" type="Script" id=3]
[ext_resource path="res://fonts/OpenSans-VariableFont_wdth,wght.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://sound effects/PageTurn.wav" type="AudioStream" id=5]
[ext_resource path="res://sound effects/book-closing.mp3" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=1]
size = 32
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=5]
size = 32
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=9]
size = 35
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=10]
size = 30
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=11]
size = 30
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=12]
size = 17
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.403922, 0.321569, 0.321569, 0 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.403922, 0.321569, 0.321569, 0 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.403922, 0.321569, 0.321569, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.6, 0.427451, 0.164706, 1 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.403922, 0.321569, 0.321569, 0 )

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.403922, 0.321569, 0.321569, 0 )

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.403922, 0.321569, 0.321569, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.6, 0.427451, 0.164706, 1 )

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.403922, 0.321569, 0.321569, 0 )

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0.403922, 0.321569, 0.321569, 0 )

[sub_resource type="StyleBoxFlat" id=21]
bg_color = Color( 0.403922, 0.321569, 0.321569, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 1
border_width_bottom = 2
border_color = Color( 0.6, 0.427451, 0.164706, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 0.403922, 0.321569, 0.321569, 0 )

[sub_resource type="StyleBoxFlat" id=23]
bg_color = Color( 0.403922, 0.321569, 0.321569, 0 )

[sub_resource type="StyleBoxFlat" id=24]
bg_color = Color( 0.403922, 0.321569, 0.321569, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.6, 0.427451, 0.164706, 1 )

[sub_resource type="StyleBoxFlat" id=25]
bg_color = Color( 0.403922, 0.321569, 0.321569, 0 )

[sub_resource type="StyleBoxFlat" id=26]
bg_color = Color( 0.403922, 0.321569, 0.321569, 0 )

[sub_resource type="StyleBoxFlat" id=27]
bg_color = Color( 0.403922, 0.321569, 0.321569, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 1
border_width_bottom = 2
border_color = Color( 0.6, 0.427451, 0.164706, 1 )

[sub_resource type="StyleBoxFlat" id=31]
bg_color = Color( 0.403922, 0.321569, 0.321569, 0 )

[sub_resource type="StyleBoxFlat" id=32]
bg_color = Color( 0.403922, 0.321569, 0.321569, 0 )

[sub_resource type="StyleBoxFlat" id=33]
bg_color = Color( 0.403922, 0.321569, 0.321569, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.6, 0.427451, 0.164706, 1 )

[sub_resource type="StyleBoxFlat" id=28]
bg_color = Color( 0.403922, 0.321569, 0.321569, 0 )

[sub_resource type="StyleBoxFlat" id=29]
bg_color = Color( 0.403922, 0.321569, 0.321569, 0 )

[sub_resource type="StyleBoxFlat" id=30]
bg_color = Color( 0.403922, 0.321569, 0.321569, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 1
border_width_bottom = 2
border_color = Color( 0.6, 0.427451, 0.164706, 1 )

[sub_resource type="StyleBoxFlat" id=34]
bg_color = Color( 0.403922, 0.321569, 0.321569, 0 )

[sub_resource type="StyleBoxFlat" id=35]
bg_color = Color( 0.403922, 0.321569, 0.321569, 0 )

[sub_resource type="StyleBoxFlat" id=36]
bg_color = Color( 0.403922, 0.321569, 0.321569, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 1
border_width_bottom = 2
border_color = Color( 0.6, 0.427451, 0.164706, 1 )

[node name="Glossar_p1" type="TextureRect"]
margin_right = 1922.0
margin_bottom = 1083.0
texture = ExtResource( 1 )
script = ExtResource( 3 )

[node name="Button_Glossar1" type="Button" parent="."]
margin_left = 152.0
margin_top = 329.0
margin_right = 295.0
margin_bottom = 384.0
custom_colors/font_color_hover = Color( 0.992157, 0.988235, 0.988235, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "Glossary"

[node name="Button_Close1" type="Button" parent="."]
margin_left = 216.0
margin_top = 444.0
margin_right = 298.0
margin_bottom = 500.0
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
text = "Close"

[node name="Label_titel1" type="Label" parent="."]
margin_left = 444.0
margin_top = 120.0
margin_right = 823.0
margin_bottom = 185.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 9 )
text = "Glossary"
align = 1

[node name="term1" type="Label" parent="."]
margin_left = 367.0
margin_top = 180.0
margin_right = 874.0
margin_bottom = 913.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 10 )
text = "Term
artefact
burial mound
celts


context
excavation journal


field plan"
align = 1

[node name="explanation1" type="Label" parent="."]
margin_left = 933.0
margin_top = 172.0
margin_right = 1565.0
margin_bottom = 939.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 11 )
text = "Explanation
An object made by humans
Burial with overlying earth mound
Also known as Gauls or Gallates, a collection of
groups in Iron Age Europe that shared cultural
 similarities
Relationship of all aspects of a feature
A journal in which the head of the excavation
notes down all events relating to the
excavation 
Plan of the excavation site showing the it's
borders and all the fund structures (numbered).
Serves as overview, documentation and helps 
to recognize bigger patterns."

[node name="Button_nextPage1" type="Button" parent="."]
margin_left = 1406.0
margin_top = 892.0
margin_right = 1554.0
margin_bottom = 932.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.360784, 0.533333, 0.254902, 1 )
custom_fonts/font = SubResource( 12 )
custom_styles/hover = SubResource( 13 )
custom_styles/pressed = SubResource( 14 )
custom_styles/normal = SubResource( 15 )
text = "to page down"

[node name="Glossar_p2" type="TextureRect" parent="."]
visible = false
margin_right = 1917.0
margin_bottom = 1076.0
texture = ExtResource( 1 )

[node name="Button_Glossar2" type="Button" parent="Glossar_p2"]
margin_left = 152.0
margin_top = 329.0
margin_right = 295.0
margin_bottom = 385.0
custom_colors/font_color_hover = Color( 0.992157, 0.988235, 0.988235, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "Glossary"

[node name="Button_Close2" type="Button" parent="Glossar_p2"]
margin_left = 216.0
margin_top = 444.0
margin_right = 298.0
margin_bottom = 500.0
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
text = "Close"

[node name="Label_titel2" type="Label" parent="Glossar_p2"]
margin_left = 444.0
margin_top = 120.0
margin_right = 823.0
margin_bottom = 185.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 9 )
text = "Glossary"
align = 1

[node name="term2" type="Label" parent="Glossar_p2"]
margin_left = 367.0
margin_top = 180.0
margin_right = 880.0
margin_bottom = 913.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 10 )
text = "Term
filling

find



find bag

finding"
align = 1

[node name="explanation2" type="Label" parent="Glossar_p2"]
margin_left = 935.0
margin_top = 169.0
margin_right = 1603.0
margin_bottom = 936.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 11 )
text = "Explanation
The material used to fill a previously excavated
area (i.e. in a waste pit)
Specific object that can provide information on
the environment or people of past times
(i.e. aretfacts, animal or human remains,
traces of plants)
Plastic bag in which finds are collected and
stored
The totality of historically significant observations
in archaeological find situations (position of finds
in relation to each other in a find context,
traces of past organic elements)"

[node name="Button_nextPage2" type="Button" parent="Glossar_p2"]
margin_left = 1406.0
margin_top = 892.0
margin_right = 1554.0
margin_bottom = 932.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.360784, 0.533333, 0.254902, 1 )
custom_fonts/font = SubResource( 12 )
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/normal = SubResource( 18 )
text = "to page down"

[node name="Button_prevPage2" type="Button" parent="Glossar_p2"]
margin_left = 352.0
margin_top = 895.0
margin_right = 500.0
margin_bottom = 935.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.360784, 0.533333, 0.254902, 1 )
custom_fonts/font = SubResource( 12 )
custom_styles/hover = SubResource( 19 )
custom_styles/pressed = SubResource( 20 )
custom_styles/normal = SubResource( 21 )
text = "to page up"

[node name="Glossar_p3" type="TextureRect" parent="."]
visible = false
margin_right = 1917.0
margin_bottom = 1083.0
texture = ExtResource( 1 )

[node name="Button_Glossar3" type="Button" parent="Glossar_p3"]
margin_left = 152.0
margin_top = 329.0
margin_right = 295.0
margin_bottom = 385.0
custom_colors/font_color_hover = Color( 0.992157, 0.988235, 0.988235, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "Glossary"

[node name="Button_Close3" type="Button" parent="Glossar_p3"]
margin_left = 216.0
margin_top = 444.0
margin_right = 298.0
margin_bottom = 500.0
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
text = "Close"

[node name="Label_titel3" type="Label" parent="Glossar_p3"]
margin_left = 444.0
margin_top = 120.0
margin_right = 823.0
margin_bottom = 185.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 9 )
text = "Glossary"
align = 1

[node name="term3" type="Label" parent="Glossar_p3"]
margin_left = 367.0
margin_top = 180.0
margin_right = 880.0
margin_bottom = 883.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 10 )
text = "Term
Hallstatt period


hill-top settlement


Iron Age


level plane"
align = 1

[node name="explanation3" type="Label" parent="Glossar_p3"]
margin_left = 935.0
margin_top = 169.0
margin_right = 1603.0
margin_bottom = 936.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 11 )
text = "Explanation
The Hallstatt period (approx. 800 - 450 BCE) 
refers to an epoch of the older Pre-Roman
Iron Age in large parts of Europe
Historical type of settlement built on
elevated sites without the assumption
of fortification 
Period named after the material used for the
 production of weapons and tools
(Central Germany ca. 900 BCE - 0)
Artificially created flat surface during
an excavation for the purpose of recognising
and documenting soil discoloration"

[node name="Button_nextPage3" type="Button" parent="Glossar_p3"]
margin_left = 1406.0
margin_top = 892.0
margin_right = 1554.0
margin_bottom = 932.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.360784, 0.533333, 0.254902, 1 )
custom_fonts/font = SubResource( 12 )
custom_styles/hover = SubResource( 22 )
custom_styles/pressed = SubResource( 23 )
custom_styles/normal = SubResource( 24 )
text = "to page down"

[node name="Button_prevPage3" type="Button" parent="Glossar_p3"]
margin_left = 352.0
margin_top = 895.0
margin_right = 500.0
margin_bottom = 935.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.360784, 0.533333, 0.254902, 1 )
custom_fonts/font = SubResource( 12 )
custom_styles/hover = SubResource( 25 )
custom_styles/pressed = SubResource( 26 )
custom_styles/normal = SubResource( 27 )
text = "to page up"

[node name="Glossar_p4" type="TextureRect" parent="."]
visible = false
margin_right = 1921.0
margin_bottom = 1079.0
texture = ExtResource( 1 )

[node name="Button_Glossar4" type="Button" parent="Glossar_p4"]
margin_left = 152.0
margin_top = 329.0
margin_right = 295.0
margin_bottom = 385.0
custom_colors/font_color_hover = Color( 0.992157, 0.988235, 0.988235, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "Glossary"

[node name="Button_Close4" type="Button" parent="Glossar_p4"]
margin_left = 216.0
margin_top = 444.0
margin_right = 298.0
margin_bottom = 500.0
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
text = "Close"

[node name="Label_titel4" type="Label" parent="Glossar_p4"]
margin_left = 444.0
margin_top = 120.0
margin_right = 823.0
margin_bottom = 185.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 9 )
text = "Glossary"
align = 1

[node name="term4" type="Label" parent="Glossar_p4"]
margin_left = 367.0
margin_top = 180.0
margin_right = 880.0
margin_bottom = 883.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 10 )
text = "Term
overburden

posthole


profile


profile box

situation of discovery"
align = 1

[node name="explanation4" type="Label" parent="Glossar_p4"]
margin_left = 935.0
margin_top = 169.0
margin_right = 1575.0
margin_bottom = 936.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 11 )
text = "Explanation
Removed soil, usually deposited in large piles
next to the excavation area
Remains of the ditch for setting up a
wooden post, today mainly recognisable as
discoloration in the ground
Corresponds to the vertical documentation
surface of an excavation, which can be used to
easily read stratigraphic sequences in particular
Quadratic trench created to document
the profile of a feature
Environment and conditions under which
archaeological finds are discovered"

[node name="Button_nextPage4" type="Button" parent="Glossar_p4"]
margin_left = 1406.0
margin_top = 892.0
margin_right = 1554.0
margin_bottom = 932.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.360784, 0.533333, 0.254902, 1 )
custom_fonts/font = SubResource( 12 )
custom_styles/hover = SubResource( 31 )
custom_styles/pressed = SubResource( 32 )
custom_styles/normal = SubResource( 33 )
text = "to page down"

[node name="Button_prevPage4" type="Button" parent="Glossar_p4"]
margin_left = 352.0
margin_top = 895.0
margin_right = 500.0
margin_bottom = 935.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.360784, 0.533333, 0.254902, 1 )
custom_fonts/font = SubResource( 12 )
custom_styles/hover = SubResource( 28 )
custom_styles/pressed = SubResource( 29 )
custom_styles/normal = SubResource( 30 )
text = "to page up"

[node name="Glossar_p5" type="TextureRect" parent="."]
visible = false
margin_right = 1917.0
margin_bottom = 1079.0
texture = ExtResource( 1 )

[node name="Button_Glossar5" type="Button" parent="Glossar_p5"]
margin_left = 152.0
margin_top = 329.0
margin_right = 295.0
margin_bottom = 385.0
custom_colors/font_color_hover = Color( 0.992157, 0.988235, 0.988235, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "Glossary"

[node name="Button_Close5" type="Button" parent="Glossar_p5"]
margin_left = 216.0
margin_top = 444.0
margin_right = 298.0
margin_bottom = 500.0
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
text = "Close"

[node name="Label_titel5" type="Label" parent="Glossar_p5"]
margin_left = 444.0
margin_top = 120.0
margin_right = 823.0
margin_bottom = 185.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 9 )
text = "Glossary"
align = 1

[node name="term5" type="Label" parent="Glossar_p5"]
margin_left = 367.0
margin_top = 180.0
margin_right = 880.0
margin_bottom = 883.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 10 )
text = "Term
stratigraphy

to clean



trench"
align = 1

[node name="explanation5" type="Label" parent="Glossar_p5"]
margin_left = 935.0
margin_top = 169.0
margin_right = 1575.0
margin_bottom = 887.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 11 )
text = "Explanation
Sequence of different layers that stand out
from each other in terms of color and texture
Careful removal of the uppermost layer exposed
to the weather (dried out, washed out, etc.)
in order to be able to clearly trace the
boundaries of the findings
An excavation area can consist of several
trench cuts. A trench is a contiguous uncovered
area. Sometimes it is wiser not to expose
the entire area at the same time and
so areas are opened up one section at a time
(sometimes over several years). "

[node name="Button_prevPage5" type="Button" parent="Glossar_p5"]
margin_left = 352.0
margin_top = 895.0
margin_right = 500.0
margin_bottom = 935.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.360784, 0.533333, 0.254902, 1 )
custom_fonts/font = SubResource( 12 )
custom_styles/hover = SubResource( 34 )
custom_styles/pressed = SubResource( 35 )
custom_styles/normal = SubResource( 36 )
text = "to page up"

[node name="PageFlip" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="BookClose" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="pressed" from="Button_Close1" to="." method="_on_Button_Close1_pressed"]
[connection signal="pressed" from="Button_nextPage1" to="." method="_on_Button_nextPage1_pressed"]
[connection signal="pressed" from="Glossar_p2/Button_Close2" to="." method="_on_Button_Close2_pressed"]
[connection signal="pressed" from="Glossar_p2/Button_nextPage2" to="." method="_on_Button_nextPage2_pressed"]
[connection signal="pressed" from="Glossar_p2/Button_prevPage2" to="." method="_on_Button_prevPage2_pressed"]
[connection signal="pressed" from="Glossar_p3/Button_Close3" to="." method="_on_Button_Close3_pressed"]
[connection signal="pressed" from="Glossar_p3/Button_nextPage3" to="." method="_on_Button_nextPage3_pressed"]
[connection signal="pressed" from="Glossar_p3/Button_prevPage3" to="." method="_on_Button_prevPage3_pressed"]
[connection signal="pressed" from="Glossar_p4/Button_Close4" to="." method="_on_Button_Close4_pressed"]
[connection signal="pressed" from="Glossar_p4/Button_nextPage4" to="." method="_on_Button_nextPage4_pressed"]
[connection signal="pressed" from="Glossar_p4/Button_prevPage4" to="." method="_on_Button_prevPage4_pressed"]
[connection signal="pressed" from="Glossar_p5/Button_Close5" to="." method="_on_Button_Close5_pressed"]
[connection signal="pressed" from="Glossar_p5/Button_prevPage5" to="." method="_on_Button_prevPage5_pressed"]
